# dataAnalysisBI

./: .gitignore  Home.py  Painel.py  README.md  pyproject.toml
data/: mercado_clientes_pt.xlsx  mercado_resumo_compras_pt.xlsx  mercado_transacoes_pt.xlsx
notebooks/: 1-Analise_de_Cancelamento_de_Clientes.ipynb
pages/: 1-Analise_de_Cancelamento_de_Clientes.py  1-Cancelamento_de_Clientes.py  2-Varejo.py  3-Segmentacao_RFM.py  4-Cancelamento_de_Assinatura.py
utils/: load_file.py  ui.py  visualizations.py
